--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -82,7 +82,7 @@
    "id": "400448d5",
    "metadata": {},
    "source": [
-    "<a herf= \"https://github.com/Reeseab03\">Github</a>"
+    "<a href=\"https://github.com/Reeseab03/Assignment-1\">Github</a>"
    ]
   },
   {
